init.d/04.setup-resources/manifests/cat-counter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-counter-deployment
spec:
  selector:
    matchLabels:
      app: cat-counter
  replicas: 1
  template:
    metadata:
      labels:
        app: cat-counter
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      containers:
      - name: cat-counter
        image: python:3.13-alpine
        command:
          - /bin/sh
          - -c
          - |
            set -e
            [ -z "$KUBERNETES_SERVICE_HOST" ] && { echo "Error: KUBERNETES_SERVICE_HOST is not set."; exit 1; }
            pip install --upgrade pip
            pip install --only-binary=:all: kubernetes
            pip install --only-binary=:all: fastapi[standard]
            fastapi run /scripts/main.py --port 80
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: pages-volume
          mountPath: /scripts
        resources:
          limits:
            cpu: 400m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 32Mi
      volumes:
        - name: pages-volume
          configMap:
            name: cat-counter-pages
