init.d/04.setup-resources/manifests/photoframe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoframe-deployment
spec:
  selector:
    matchLabels:
      app: photoframe
  replicas: 1
  template:
    metadata:
      labels:
        app: photoframe
    spec:
      containers:
      - name: nginx
        image: nginx:1.31.6
        ports:
        - containerPort: 80
        volumeMounts:
        - name: photo-volume
          mountPath: /usr/share/nginx/html
        resources:
          limits:
            cpu: 200m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 32Mi
      volumes:
        - name: photo-volume
          configMap:
            name: picturedrive
