init.d/04.setup-resources/manifests/riddle1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: riddle1-pod
spec:
  containers:
  - name: riddle1-container
    image: nginx:latest
    imagePullPolicy: Never
