init.d/04.setup-resources/manifests/riddle3-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: riddle3-pod
spec:
  containers:
  - name: riddle3-container
    image: nginx:latest
    ports:
    - containerPort: 80
    readinessProbe:
      httpGet:
        path: /
        port: 80
