init.d/04.setup-resources/manifests/cat-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cat-service
spec:
  selector:
    app: cat
  ports:
  - port: 80
