init.d/04.setup-resources/manifests/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - port: 80
