init.d/04.setup-resources/manifests/riddle6-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: riddle6-service
  namespace: riddle6
spec:
  selector:
    app: riddle6-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
