init.d/04.setup-resources/manifests/escape-room-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: escape-room-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /riddles/cat(/|$)(.*)
        backend:
          service:
            name: cat-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /riddles/cat-counter(/|$)(.*)
        backend:
          service:
            name: cat-counter-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /riddles/orb(/|$)(.*)
        backend:
          service:
            name: orb-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /riddles/photoframe(/|$)(.*)
        backend:
          service:
            name: photoframe-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /riddles/tome(/|$)(.*)
        backend:
          service:
            name: tome-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /()(.*)
        backend:
          service:
            name: frontend-service
            port:
              number: 80
